--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.17.1",
+    "mocha": "^8.1.3",
     "phaser": "^3.24.1",
+    "sinon": "^9.1.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node index.js"
+    "test": "mocha",
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
