--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "mocha": "^8.1.3",
     "phaser": "^3.24.1",
     "sinon": "^9.1.0",
+    "vue": "^2.6.12",
     "ws": "^7.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-plugin-vue": "^7.0.1",
+    "webpack": "^5.1.0",
+    "webpack-cli": "^4.0.0"
+  },
   "scripts": {
     "test": "mocha",
-    "start": "node ./server/server.js"
+    "start": "node ./server/server.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
